--- a/codeindex-core/pom.xml
+++ b/codeindex-core/pom.xml
@@ -34,5 +34,9 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+    </dependency>
   </dependencies>
 </project>
