--- a/codeindex-bom/pom.xml
+++ b/codeindex-bom/pom.xml
@@ -83,6 +83,11 @@
         <version>${mockito.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.antlr</groupId>
+        <artifactId>antlr4-runtime</artifactId>
+        <version>4.13.1</version>
+      </dependency>
+      <dependency>
         <groupId>org.reflections</groupId>
         <artifactId>reflections</artifactId>
         <version>${reflections.version}</version>
