feat: implement GNU-style CLI with picocli and update documentation

--- a/codeindex-bom/pom.xml
+++ b/codeindex-bom/pom.xml
@@ -92,6 +92,11 @@
         <artifactId>reflections</artifactId>
         <version>${reflections.version}</version>
       </dependency>
+      <dependency>
+        <groupId>info.picocli</groupId>
+        <artifactId>picocli</artifactId>
+        <version>4.7.5</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
